# keepline

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN_GITHUB_TRENDING.md  README.md  README_CN.md  REFACTOR_PLAN.md  package.json  tsconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.specrail/runtime/: current.json
autonomous-runner/: .gitignore  README.md  config.yaml  orchestrator.py  start.sh  status.sh  stop.sh
autonomous-runner-poker/: config.yaml
autonomous-runner-poker/logs/: summary.txt
autonomous-runner-poker/memory/: CONTEXT.md  DONE.md  TASKS.md
autonomous-runner-poker/workspace/: docker-compose.yml  nakama-config.yml
autonomous-runner-spaceview/: config.yaml  orchestrator.py  start.sh
autonomous-runner-spaceview/memory/: CONTEXT.md  DONE.md  TASKS.md
autonomous-runner-werewolf/: run.sh
autonomous-runner-werewolf/logs/: summary.txt
autonomous-runner-werewolf/memory/: CONTEXT.md  DONE.md  TASKS.md
autonomous-runner/memory/: CONTEXT.md  DONE.md  TASKS.md
autonomous-runner/worker/: Dockerfile
docs/: CODEX_HUB_REBRAND_AND_CODEX_DETECTION_SPEC.md  FEATURE_ROADMAP.md  IMPLEMENTATION_PLAN.md  KEEPLINE_REBRAND_AND_CODEX_DETECTION_SPEC.md  PROJECTS_VIEW_DESIGN.md  TODO_BUGS.md  claude-code-24h-solutions.md
docs/architecture/: KEEPLINE_V2_ARCHITECTURE.md  QUICK_REFERENCE.md  TASKER_V2_ARCHITECTURE.md
docs/todo/: MEMORY_UPGRADE.md
menubar/: README.md  package-lock.json  package.json  tsconfig.main.json  vite.config.ts
menubar-tauri/: CLAUDE.md  README.md  package-lock.json  package.json
menubar-tauri/scripts/: tauri-dev.js
menubar-tauri/src/: App.tsx  styles.css
menubar-tauri/src-tauri/: CLAUDE.md  Cargo.toml  Info.plist  tauri.conf.json
menubar-tauri/src-tauri/icons/: icon.icns
menubar-tauri/src-tauri/src/: codex.rs  cost.rs  lib.rs  main.rs  panel_position.rs  quota.rs  tray_commands.rs  tray_icon.rs
menubar/assets/: .gitkeep
menubar/scripts/: generate-icon.js
menubar/src/: main.ts  preload.ts  quota.ts
specs/GH100/: product.md  tasks.md  tech.md
specs/GH101/: product.md  tasks.md  tech.md
specs/GH102/: product.md  tasks.md  tech.md
specs/GH103/: product.md  tasks.md  tech.md
specs/GH104/: product.md  tasks.md  tech.md
specs/GH105/: product.md  tasks.md  tech.md
specs/GH44/: cursor-runtime-discovery.md  product.md  tasks.md  tech.md
specs/GH62/: product.md  tasks.md  tech.md
specs/GH74/: product.md  tasks.md  tech.md
specs/GH75/: product.md  tasks.md  tech.md
specs/GH76/: product.md  tasks.md  tech.md
specs/GH77/: product.md  tasks.md  tech.md
specs/GH78/: product.md  (+2 more)
src/: index.ts
(+510 files in other folders)
