[package]
name = "claude-quota-monitor"
version = "1.1.0"
description = "Claude usage quota monitor for system tray"
authors = ["Claude Hub"]
edition = "2021"

[lib]
name = "claude_quota_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
window-vibrancy = "0.5"
image = "0.25"
ab_glyph = "0.2"
once_cell = "1.19"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"

[profile.release]
panic = "abort"
codegen-units = 1
lto = false
opt-level = 2
strip = false
